--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.karumi:dexter:5.0.0'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+
 
 }
