--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,7 @@
             android:exported="true" />
 
         <service android:name=".Myservice" />
-        <service android:name=".ExampleService"/>+
+        <service android:name=".ExampleService"/>
 
     </application>
 
